# invoice-gen

./: .gitignore  README.md  config.py  pyproject.toml  speech.py  templates.py  utils.py
invoice_generator/: config.py  ig.py  invoice_api.py  main.py  speech.py  template_dialogs.py  templates.py  utils.py
src/: ig.py  main.py  template_dialogs.py
src/templates/: CTC.json
templates/: Example.json
