[project]
name = "invoice-gen"
version = "0.1.0"
description = "A WXPython based GUI application for quickly generating invoices"
readme = "README.md"
requires-python = ">=3.13"
authors = [
	{ name = "Carter Temm", email = "cartertemm@gmail.com" }
]
dependencies = [
	"wxpython>=4.2.0",
	"requests>=2.31.0",
	"accessible_output2>=0.17"
]

[project.scripts]
invoice-gen = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
